--- a/about.qmd
+++ b/about.qmd
@@ -22,15 +22,29 @@ My interests include:
 -   Fisheries sustainability
 -   Environmental Justice
 
+![](images/bainbridge.png)
+
 ## Hobbies
 
 <h4>My Hobbies!</h4>
 
-What do I do outside of the office and classroom? I love hiking, biking, swimming, and generally spending time outdoors. You can frequently catch me reading a book, and it's most likely a mystery/thriller novel (find me on [Goodreads](https://www.goodreads.com/user/show/95038298-elke-windschitl)!) I spend a lot of time in the kitchen cooking and baking -- I picked up these two hobbies during the COVID-19 pandemic. Last, I dabble in digital illustration & graphic design. I have been selling prints and stickers since 2017.
+What do I do outside of the office and classroom? I love hiking, biking, swimming, and generally spending time outdoors. You can frequently catch me reading a book, and it's most likely a mystery/thriller novel (find me on [Goodreads](https://www.goodreads.com/user/show/95038298-elke-windschitl)!) I spend a lot of time in the kitchen cooking and baking -- I picked up these two hobbies during the COVID-19 pandemic. Last, I dabble in digital illustration, graphic design, and photography. I have been selling prints and stickers since 2017.
+
+::: {layout-ncol="2"}
+![](images/butterflies.png)
+
+![](images/the_overstory.png)
+
+![](images/paddleboard.png)
+
+![](images/biking.png)
+:::
 
 ## Homes
 
-I grew up in the state of Iowa, but I've moved around a lot in my adult life! I participated in multiple National Student Exchange programs, and I moved around for internships and fellowships. Check out all the places I've lived since I started college in 2016 and relatively how long I lived there:
+<h4>My Homes</h4>
+
+I grew up in the state of Iowa, but I've moved around a lot in my adult life! I participated in multiple National Student Exchange programs, and I moved around for internships and fellowships. Check out all the places I've lived since I started college in 2016 -- size indicates relatively how long I lived there:
 
 ```{r}
 #| include: false
