--- a/posts/2022-12-02-hawaiian-fish-analysis/index.qmd
+++ b/posts/2022-12-02-hawaiian-fish-analysis/index.qmd
@@ -5,6 +5,7 @@ author:
     url: https://elkewind.github.io
     affiliation: UCSB Bren School
     affiliation-url: http://ucsb-meds.github.io
+description: "A logistic regression example with fish"
 date: 2022-12-02
 categories: [MEDS, Statistics]
 citation: 
