--- a/posts/2019-12-01-bobwhite-aru-research/index.qmd
+++ b/posts/2019-12-01-bobwhite-aru-research/index.qmd
@@ -10,6 +10,7 @@ date: 2019-12-01
 categories: [ISU]
 citation: 
   url: https://elkewind.github.io/posts/2019-12-01-bobwhite-aru-research
+image: bobwhite.jpg
 format:
   html:
     toc: true
